Template update for the dynamic content building script

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
                                     <div>
                                         <ul id="education-attributes">
                                             <li>
-                                                <span class="bold">School: </span>School name
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Education degree: </span>Bachelor's degree
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Degree name: </span>Degree name
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Duration: </span>Start date - End date - duration
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                         </ul>
                                         <p id="education-description">
@@ -251,9 +251,7 @@
                                     <span class="bold">Placeholder</span> 
                                     <span>Placeholder</span>
                                 </p>
-                                <div class="tech-stack">
-                                    <span>Placeholder</span>
-                                </div>
+                                <div class="tech-stack"></div>
                             </div>
                         </article>
                     </div>
@@ -263,129 +261,30 @@
 
             <!-- SKILLS -->
             <section id="skills">
-                <article class="skills">
+                <article id="skills-wrapper" class="skills">
                     <header>
-                        <h2>Skills</h2>
+                        <h2>Placeholder</h2>
                     </header>
                     <div class="skills-container">
-                        <h3>Technical skills</h3>
+                        <h3>PLaceholder</h3>
                         <div>
                             <input type="checkbox" name="sections" id="skill-one">
                             <label for="skill-one">
-                                <h4>Tech skill 1</h4>
-                                <p class="bold">Tech skill 1</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-two">
-                            <label for="skill-two">
-                                <h4>Tech skill 2</h4>
-                                <p class="bold">Tech skill 2</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-three">
-                            <label for="skill-three">
-                                <h4>Tech skill 3</h4>
-                                <p class="bold">Tech skill 3</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
+                                <h4>PLaceholder</h4>
+                                <p class="bold">PLaceholder</p>
+                                <p>PLaceholder</p>
                             </label>
                         </div>
                     </div>
                     <div class="skills-container">
-                        <h3>Soft skills</h3>
+                        <h3>PLaceholder</h3>
 
                         <div>
                             <input type="checkbox" name="sections" id="skill-four">
                             <label for="skill-four">
-                                <h4>Soft skills 1</h4>
-                                <p class="bold">Soft skills 1</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-five">
-                            <label for="skill-five">
-                                <h4>Soft skills 2</h4>
-                                <p class="bold">Soft skills 2</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-six">
-                            <label for="skill-six">
-                                <h4>Soft skills 3</h4>
-                                <p class="bold">Soft skills 3</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-seven">
-                            <label for="skill-seven">
-                                <h4>Soft skills 4</h4>
-                                <p class="bold">Soft skills 4</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
+                                <h4>PLaceholder</h4>
+                                <p class="bold">PLaceholder</p>
+                                <p>PLaceholder</p>
                             </label>
                         </div>
                     </div>
@@ -395,92 +294,36 @@
 
             <!-- LANGUAGES -->
             <section id="languages">
-                <article class="languages">
+                <article id="languages-wrapper" class="languages">
                     <header>
-                        <h2>Languages</h2>
+                        <h2>Placeholder</h2>
                     </header>
                     <table>
-                        <caption>Language proficiency</caption>
+                        <caption hidden>PlaceHolder</caption>
                         <thead>
                             <tr>
-                                <th scope="col">Language</th>
-                                <th scope="col">Speaking</th>
-                                <th scope="col">Writting</th>
-                                <th scope="col">Reading</th>
-                                <th scope="col">Grammar</th>
+                                <th scope="col">PlaceHolder</th>
+                                <th scope="col">PlaceHolder</th>
+                                <th scope="col">PlaceHolder</th>
+                                <th scope="col">PlaceHolder</th>
+                                <th scope="col">PlaceHolder</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Language</th>
-                                <td class="bold">English</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Speaking</th>
-                                <td>C</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Writting</th>
-                                <td>C</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Reading</th>
-                                <td>C</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Grammar</th>
-                                <td>C</td>
-                            </tr>
-                        </tbody>
-
-                        <tbody>
-                            <tr>
-                                <th scope="row">Language</th>
-                                <td class="bold">German</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Speaking</th>
-                                <td>B</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Writting</th>
-                                <td>B</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Reading</th>
-                                <td>C</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Grammar</th>
-                                <td>B</td>
-                            </tr>
-                        </tbody>
                     </table>
-
                 </article>
             </section>
             <!-- LANGUAGES -->
 
             <!-- CONTACTS -->
             <section id="contacts">
-                <article class="contacts">
+                <article id="contact-section-container" class="contacts">
                     <header>
-                        <h2>Contacts</h2>
+                        <h2>Placeholder</h2>
                     </header>
                     <ul>
                         <li>
-                            <!-- <h5> -->
-                            <span class="bold">Telephone: </span>
-                            <a href="tel:+358 888 888 888">+358 888 888 888</a>
-                            <!-- </h5> -->
-                        </li>
-                        <li>
-                            <span class="bold">Email: </span>
-                            <a href="mailto:some-email@someemail.com">some-email@someemail.com</a>
-                        </li>
-                        <li>
-                            <span class="bold">Linkedin: </span>
-                            <a href="https://www.linkedin.com/" target="_blank">Linked in profile</a>
+                            <span class="bold">Placeholder </span>
+                            <a href="Placeholder">Placeholder</a>
                         </li>
                     </ul>
                 </article>
@@ -492,9 +335,9 @@
     <!-- FOOTER -->
     <div class="static-container">
         <footer>
-            <p class="bold">Developed by Georgi Brankovanov - 2024</p>
+            <slot id="footer-wrapper"></slot>
             <a href="#bio" class="go-to-top">&uArr;</a>
-            <select id="footer-language-select" class="footer-language-select">
+            <select id="footer-language-select" class="footer-language-select" onchange="changeLanguage(this)">
                 <option selected="" value=""></option>
                 <option selected="" value=""></option>
                 <option selected="" value=""></option>
@@ -507,12 +350,10 @@
 </html>
 
 <!-- SPINNER -->
-<div id='spinner' class="d-flex align-content-center justify-content-center flex-wrap spinner">
-    <output class="spinner-border d-flex justify-content-center align-content-center flex-wrap"  >
-      <output class="spinner-grow spinner-grow-sm" ></output>
-    </output>
-  </div>
-  <!-- SPINNER -->
+<div id='spinner' class="spinner">
+    <output class="loader"></output>
+</div>
+<!-- SPINNER -->
   
 
 <script type="module"  src="scripts/main.js"></script>
