--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta name="theme-color" content="#204020">
     <meta name="apple-mobile-web-app-title" content="Placeholder" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_package/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_package/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_package/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/favicon_package/site.webmanifest">
-    <link rel="mask-icon" href="assets/images/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
-    <script type="module"  src="scripts/main.js"></script>
-    <link rel="stylesheet" href="styles/styles.css">
+
+    <link rel="icon" type="image/png" href="assets/images/favicon_package/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon_package/favicon.svg" />
+    <link rel="shortcut icon" href="assets/images/favicon_package/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_package/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/images/favicon_package/site.webmanifest" />
+    <link rel="preload" href="styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" as="image" href="assets/images/pexels-simon-robben-614810.webp" type="image/webp">
     <title>Placeholder</title>
 </head>
 
@@ -134,7 +135,7 @@
                             <label for="">
                                 <article>
                                     <header>
-                                        <h4 id="education-title">Placeholder</h4>
+                                        <h3 id="education-title">Placeholder</h3>
                                     </header>
                                     <div>
                                         <ul id="education-attributes">
@@ -166,7 +167,7 @@
 
             <!-- COURSES AND CERTIFICATES -->
             <section id="courses-and-certificates">
-                <article id="courses-and-certificates-wrapper" class="courses-and-ceriticates">
+                <article id="courses-and-certificates-wrapper" class="courses-and-certificates">
                     <header>
                         <h2 id="courses-and-certificates-title">Placeholder</h2>
                     </header>
@@ -178,7 +179,7 @@
                                 <div> 
                                     <input type="checkbox" name="sections" id="">
                                     <label for="">
-                                        <img for="" src="" alt="" />
+                                        <img for="" src="" alt="" loading="lazy"/>
                                     </label>
                                 </div>
                                 <!-- IMAGES -->
@@ -219,7 +220,9 @@
                             </div>
                         </div>
                         <div class="carousel-indicators">
-                            <label></label>
+                            <label aria-label="carousel-indicator">
+                                <input></input>
+                            </label>
                         </div>
                     </div>
                 </article>
@@ -302,7 +305,7 @@
                     <table>
                         <caption hidden>PlaceHolder</caption>
                         <thead>
-                            <tr>
+                            <tr scope="row">
                                 <th scope="col">PlaceHolder</th>
                                 <th scope="col">PlaceHolder</th>
                                 <th scope="col">PlaceHolder</th>
@@ -338,7 +341,8 @@
         <footer>
             <slot id="footer-wrapper"></slot>
             <a href="#bio" class="go-to-top">&uArr;</a>
-            <select id="footer-language-select" class="footer-language-select" onchange="changeLanguage(this)">
+            <label hidden for="footer-language-select" aria-label="footer-language-select"></label>
+            <select id="footer-language-select" class="footer-language-select" onchange="changeLanguage(this)" aria-label="footer-language-select">
                 <option selected="" value=""></option>
                 <option selected="" value=""></option>
                 <option selected="" value=""></option>
@@ -351,14 +355,16 @@
 </html>
 
 <!-- SPINNER -->
-<div id='spinner' class="spinner">
+<div id='spinner' class="spinner flex">
     <output class="loader"></output>
 </div>
 <!-- SPINNER -->
 
 <!-- Error -->
  <div id="error" class="error">
-    <h1 class="error-message"></h1>
+    <h1 class="error-message">PlaceHolder</h1>
     <small class="error-message"></small>
  </div>
 <!-- Error -->
+
+<script type="module" src="scripts/main.js" async></script>
