Small visual fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1 id="header-logo" class="bold"> Person name </h1>
                 </div>
                 <div class="header-wrapper">
-                    <input type="checkbox" name="toggler" id="toggle-header">
+                    <input type="checkbox" name="toggler" hidden id="toggle-header">
                     
                     <label for="toggle-header" aria-label="toggle-header"></label>
                     <div class="toggle-button" 
