--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     
                     <label for="toggle-header" aria-label="toggle-header"></label>
                     <div class="toggle-button" 
+                    role="button"
                         aria-roledescription="button"
                         tabindex="-1" 
                         autofocus
